# django_htmx_forms

./: .flake8  README.md  pyproject.toml  requirements.txt
django_htmx_forms/: __init__.py  mixins.py
tests/: settings.py  test_mixin.py  urls.py
tests/templates/contact/: _form.html  custom_partial.html  page.html
