[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-htmx-forms"
version = "0.1.0"
description = "A zero-boilerplate mixin to seamlessly integrate Django Forms with HTMX."
readme = "README.md"
authors = [
    { name = "corteisjr", email = "corteisjunior@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "Django>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "--tb=short"

[project.urls]
Homepage = "https://github.com/corteisjr/django-htmx-forms"
Repository = "https://github.com/corteisjr/django-htmx-forms.git"
"Bug Tracker" = "https://github.com/corteisjr/django-htmx-forms/issues"

[tool.hatch.build.targets.wheel]
packages = ["django_htmx_forms"]

[tool.hatch.build.targets.sdist]
include = [
    "/django_htmx_forms",
    "/README.md",
    "/LICENSE",
]
